--- a/frontend/public/slider.css
+++ b/frontend/public/slider.css
@@ -19,11 +19,14 @@ input[type=range]::-webkit-slider-thumb {
     margin-top: 0px;
     width: 29px;
     height: 29px;
-    background: #c0c0c0;
+    background: #2d3748;
     border: 0;
     border-radius: 5px;
     cursor: pointer;
     -webkit-appearance: none;
+}
+.mode-dark input[type=range]::-webkit-slider-thumb {
+    background: #fff;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
     background: #e76223;
@@ -39,10 +42,13 @@ input[type=range]::-moz-range-track {
 input[type=range]::-moz-range-thumb {
     width: 29px;
     height: 29px;
-    background: #c0c0c0;
+    background: #2d3748;
     border: 0;
     border-radius: 5px;
     cursor: pointer;
+}
+.mode-dark input[type=range]::-moz-range-thumb {
+    background: #fff;
 }
 input[type=range]::-ms-track {
     background: transparent;
@@ -66,12 +72,15 @@ input[type=range]::-ms-fill-upper {
 input[type=range]::-ms-thumb {
     width: 29px;
     height: 29px;
-    background: #c0c0c0;
+    background: #2d3748;
     border: 0;
     border-radius: 5px;
     cursor: pointer;
     margin-top: 0px;
     /*Needed to keep the Edge thumb centred*/
+}
+.mode-dark input[type=range]::-ms-thumb {
+    background: #fff;
 }
 input[type=range]:focus::-ms-fill-lower {
     background: #e65f1e;
