--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,3 +10,14 @@
   background: #1444ff; /* Gecko Browsers */
   color: white;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-none::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-none {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
